<resources>
    <string name="app_name">Stopwatch</string>

    <string name="HeaderText" translatable="false">Timer App</string>
    <string name="SetTime" translatable="false">00:00:00</string>
    <string name="BtnRun" translatable="false">Run</string>
    <string name="chronometerText"  translatable="false">00:00:00</string>
    <string name="BtnTxtLap"  translatable="false">Lap</string>
    <string name="DialogHeader"  translatable="false">Set Your Time</string>
    <string name="DialogSetTimeBtn"  translatable="false">Set Time</string>







</resources>